# ChangeLog for x11-libs/qt-webkit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-webkit/ChangeLog,v 1.40 2009/06/02 18:05:06 fauli Exp $

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  qt-webkit-4.5.1.ebuild:
  stable x86, bug 266201

  30 May 2009; Ben de Groot <yngwin@gentoo.org> qt-webkit-4.5.1.ebuild:
  Revert kde useflag addition, as it breaks stable

  29 May 2009; Ben de Groot <yngwin@gentoo.org> qt-webkit-4.5.1.ebuild:
  Add kde useflag to make dependency calculation easier, bug 270188

  28 May 2009; Robert Piasek <dagger@gentoo.org> qt-webkit-4.5.1.ebuild:
  stable on arm (bug #266201)

  24 May 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-webkit-4.5.1.ebuild:
  Keyworded on alpha, bugs 266201 and 269739

  24 May 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-webkit-4.5.1.ebuild:
  Added code to make linking work on alpha

  14 May 2009; Ben de Groot <yngwin@gentoo.org> -qt-webkit-4.5.0.ebuild:
  Remove old

  13 May 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking qt-webkit-4.5.1 ppc stable for bug 266201

  28 Apr 2009; Jeroen Roovers <jer@gentoo.org> qt-webkit-4.4.2-r1.ebuild:
  Stable for HPPA (bug #263945).

*qt-webkit-4.5.1 (27 Apr 2009)

  27 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-webkit-4.5.1.ebuild:
  Version bump to 4.5.1

  15 Apr 2009; Brent Baude <ranger@gentoo.org> qt-webkit-4.4.2-r1.ebuild:
  Marking qt-webkit-4.4.2-r1 ppc64 for bug 263945

  11 Apr 2009; nixnut <nixnut@gentoo.org> qt-webkit-4.4.2-r1.ebuild:
  ppc stable #263945

  11 Apr 2009; Raúl Porcel <armin76@gentoo.org> qt-webkit-4.4.2.ebuild,
  qt-webkit-4.4.2-r1.ebuild:
  alpha/ia64 stable

  05 Apr 2009; Markus Meier <maekke@gentoo.org> qt-webkit-4.4.2-r1.ebuild:
  amd64/x86 stable, bug #263945

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-webkit-4.5.0_rc1.ebuild:
  Dropping 4.5.0_rc1
