@@ -6,6 +6,6 @@ DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0df
 DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
 EBUILD qt-webkit-4.4.2-r1.ebuild 1199 RMD160 514f46c8f0dfa1152d91a610b15eed1560f5827b SHA1 bb7a138b71e0c84b0e93ddceb525bf0df2421d05 SHA256 383895b7d9be55560a94e14ede9d9708c7a446e7aa5f223d0b0e80ae0fb2bc72
 EBUILD qt-webkit-4.4.2.ebuild 1097 RMD160 f5d21a45be248e9d007126b578b2c118279343ec SHA1 ad3c6f0e43db2b40773bc6effbb415b1423f39a8 SHA256 fbb99b41116247d8c631299473eb3405a3d3efb4e3ac07066764dc01edf3c3b3
-EBUILD qt-webkit-4.5.1.ebuild 1072 RMD160 c759152116633b83f2dcf661f851b972c0512372 SHA1 e7098bea1f23700649235901ff90f4313aba9299 SHA256 dcf7f30892d6caee152ce35d69e127d2be2bf0f44a7c884eaf88e1c534b5bdee
-MISC ChangeLog 5321 RMD160 c84ab160bcb54eee18740fcefad2212b4d476672 SHA1 5b76fdc4bff2c7ec44b4f53cee8a701ce0fba887 SHA256 123ac45a9314f6be4154d0f9d634e64ca4c4cc199ec13edf45e74566f17b9baa
-MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
+EBUILD qt-webkit-4.5.1.ebuild 1087 RMD160 c2f0fe7705d7ac8153ca84dba19254c9fc42c248 SHA1 d522d1cb268908417c089e32b215b07ccfcb3a3f SHA256 b9265c828794d503333459910535d3d61d45b7915deb48a8d603f80e83a2a4e5
+MISC ChangeLog 5657 RMD160 e5f106db7c952a3ebc7fa166bb4e8a55dee5ebe1 SHA1 d22e619bb5d98766ac7e87a535a8af41a95ec0e9 SHA256 32ff7932db5c9b09f766c6011f4684c2c63583101cc2e6d52f55dbbf6ff841c3
+MISC metadata.xml 284 RMD160 b9074d3491bcd710578c8eea5d49322e37cbeee9 SHA1 43a9766ca508301d94a0a11151d1e7114d5f2e9a SHA256 d93c9eadc729c0d1cee418ee259ed1fac10fc8d908a3508d67a73bd9f1de900a
