@@ -1,6 +1,14 @@
 # ChangeLog for x11-libs/qt-webkit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-webkit/ChangeLog,v 1.40 2009/06/02 18:05:06 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-webkit/ChangeLog,v 1.42 2009/06/04 14:14:31 hwoarang Exp $
+
+  04 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-webkit-4.5.1.ebuild:
+  Adjust correct phonon dependencies ( bug 270188 )
+
+  03 Jun 2009; Ben de Groot <yngwin@gentoo.org> qt-webkit-4.5.1.ebuild,
+  metadata.xml:
+  Add kde useflag again, for selecting media-sound/phonon, now that that
+  package is stable on the needed arches
 
   02 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
   qt-webkit-4.5.1.ebuild:
